Correction dans la mise en page des cartes d'acvities pour la version desktop suite à la mise en page de la version tablette

--- a/css/style.css
+++ b/css/style.css
@@ -396,6 +396,10 @@ header {
 
 .activites_cards .card-content {
     padding : 20px 19px;
+    display : flex;
+    flex-direction: row;
+    align-items: center;
+    height: 30px;
 }
 
 
@@ -482,9 +486,6 @@ footer {
     }
     
     .activites_cards .card-content {
-        display : flex;
-        flex-direction: row;
-        align-items: center;
         height : 40px;
     }
 
